<resources>
    <string name="app_name">Makaryo</string>
    <string-array name="data_builder">

        <item>Alex</item>
        <item>Ahmad</item>
        <item>Agus</item>
        <item>Feni</item>
        <item>Bambang</item>
        <item>Muthu</item>
        <item>Baharudin</item>
        <item>Jokooo</item>

    </string-array>
    <string-array name="data_skill_builder">
        <item>Cat Atap </item>
        <item>Plafon Cat</item>
        <item>Cat Atap Pipa</item>
        <item>Kaca Atap </item>
        <item>Atap</item>
        <item>Cat</item>
        <item>Atap Plafon</item>
        <item>Atap Cat</item>

    </string-array>
    <string-array name="data_star_builder">
        <item>4.0</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.3</item>
        <item>4.7</item>
        <item>4.8</item>
        <item>4.6</item>
        <item>5.0</item>
    </string-array>
    <string-array name="data_electronic">

        <item>Juanda</item>
        <item>Gylga</item>
        <item>Hasyan</item>
        <item>Dendy Syahputra</item>
        <item>Dafa Kuda</item>
        <item>Dede Inoen</item>

    </string-array>
    <string-array name="data_skill_electronic">
        <item>Kipas Ac</item>
        <item>Mesin cuci Kulkas</item>
        <item>TV Radio</item>
        <item>Ac Lampu</item>
        <item>Kipas TV Komputer</item>
        <item>Kipas Kulkas</item>

    </string-array>
    <string-array name="data_star_electronic">
        <item>4.0</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.3</item>
        <item>4.7</item>
        <item>4.9</item>

    </string-array>
    <string-array name="data_cleaning">

        <item>Boyy</item>
        <item>Gentaaa</item>
        <item>Pascol</item>
        <item>Sumanto</item>
        <item>Ari Blekk</item>


    </string-array>
    <string-array name="data_skill_cleaning">
        <item>Karpet</item>
        <item>Rumah</item>
        <item>Kantor</item>
        <item>Sofa Karpet</item>
        <item>Rumah Kantor</item>

    </string-array>
    <string-array name="data_otomotif">

        <item>Syamsudin</item>
        <item>Yonoo</item>
        <item>Memett</item>
        <item>Sonny</item>
        <item>Miekum</item>

    </string-array>
    <string-array name="data_skill_otomotif">
        <item>Modifikasi Tuneup</item>
        <item>Tuneup Modifukasi</item>
        <item>Mesindiesel </item>
        <item>Ban Roda Bodyrepair</item>
        <item>Motor Tuneup</item>

    </string-array>
    <string-array name="data_distance">
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>8</item>
        <item>1</item>
        <item>5</item>
        <item>2</item>
        <item>7</item>
    </string-array>
    <string-array name="data_category">
        <item>Builder</item>
        <item>Electronic</item>
        <item>Otomotif</item>
        <item>Cleaning</item>

    </string-array>
    <string-array name="data_star">
        <item>5.0</item>
        <item>4.1</item>
        <item>4.1</item>
        <item>4.7</item>
        <item>4.3</item>
        <item>4.8</item>
        <item>5.0</item>
        <item>4.2</item>
    </string-array>
    <string-array name="data_alamat">
        <item>Bantul, DI.Yoyakarta</item>
        <item>Klaten, Jawa tengah</item>
        <item>Gunung Kidul, DI. Yogyakarta</item>
        <item>Bantul, DI. Yogyakarta </item>
        <item>Sleman, DI. Yogyakarta</item>
        <item>Sleman, DI. Yogyakarta</item>
        <item>Kulon Progo, DI. Yogyakarta</item>
        <item>Kota Yogyakarta</item>

    </string-array>
    <string-array name="data_craftsman">
        <item>Joko</item>
        <item>Dede Inoen </item>
        <item>Gylga</item>
        <item>Dafaa Kuda</item>
        <item>Pascol Miya</item>
        <item>Bambang</item>
        <item>Ari Blek</item>
        <item>Agus</item>

    </string-array>
    <string-array name="data_skill">
        <item>Atap Cat</item>
        <item>Kipas Kulkas</item>
        <item>Mesin cuci  Kulkas</item>
        <item>Kipas TV Komputer</item>
        <item>Kantor </item>
        <item>Atap</item>
        <item>Rumah Kantor</item>
        <item>Cat Atap Pipa </item>

    </string-array>
    <string-array name="data_dalam_proses">
        <item>sedang dalam perjalanan</item>
        <item>sedang di kerjakan</item>
    </string-array>
    <string-array name="data_">
        <item>sedang dalam perjalanan</item>
        <item>sedang di kerjakan</item>

    </string-array>
    <string-array name="data_riwayat">
        <item>service sudah selesai</item>

    </string-array>
    <string-array name="data_craftsman_chat">

        <item>Joko</item>
        <item>Dede Inoen </item>
        <item>Gylga</item>

    </string-array>
    <string-array name="data_date">
        <item>2 May, 2024</item>
        <item>3 May, 2024</item>
        <item>4 May, 2024</item>
        <item>5 May, 2024</item>
        <item>6 May, 2024</item>
        <item>7 May, 2024</item>
        <item>2 May, 2024</item>
        <item>9 May, 2024</item>
        <item>14 May, 2024</item>
        <item>2 May, 2024</item>
        <item>18 May, 2024</item>

    </string-array>
    <string-array name="data_status">
        <item>On</item>
        <item>Off</item>

    </string-array>
    <string-array name="data_skill1">
        <item>Cat Pipa</item>
        <item>Pipa Atap Cat</item>
        <item>Pipa</item>
        <item>Cat</item>
        <item>Pipa Atap Cat</item>
        <item>Pipa</item>
        <item>Atap Pipa</item>
        <item>Atap Pipa</item>
    </string-array>
    <string-array name="data_skill2">
        <item>Pipa</item>
        <item>Pipa</item>
        <item>Atap</item>
        <item>Atap</item>
        <item>Atap</item>
        <item>Atap</item>
        <item>Atap</item>
        <item>Atap</item>

    </string-array>
    <string-array name="data_skill3">
        <item>Atap</item>
        <item>Pipa</item>
        <item>Atap</item>
        <item>Atap</item>
        <item>Atap</item>

    </string-array>
    <string-array name="data_statusCrafts">
        <item>On</item>
        <item>On</item>
        <item>Off</item>
        <item>Off</item>

    </string-array>
    <string-array name="data_lastChat">
        <item>Okee</item>
        <item>Baikk</item>
        <item>Terima Kasih</item>

    </string-array>
    <string-array name="data_jam">
        <item>10:30 PM</item>
        <item>09:19 PM</item>
        <item>11:19 PM</item>

    </string-array>
    <string-array name="data_labelAlamat">
        <item>Alamat Pertama</item>
        <item>Alamat Kedua</item>
        <item>Alamat Ketiga</item>
    </string-array>
    <string-array name="data_nameAlamat">
        <item>Ticha </item>
        <item>Jenifer </item>
        <item>Fauzan </item>
    </string-array>
    <string-array name="data_noHpAlamat">
        <item>(084772382390)</item>
        <item>(085274626507)</item>
        <item>(085748749796)</item>
    </string-array>
    <string-array name="data_complateAlamat">
        <item>Gang Kenangan No.70\nWedomartani,Ngemplak, Sleman, DI Yogyakarta</item>
        <item>Jln Nin Aja Dulu No.04\nManisrenggo, Klaten, Jawa Tengah</item>
        <item>Ngringin, Condongcatur,Kec. Depok, Kabupaten Sleman, Di Yogyakarta</item>
    </string-array>
    <string name="login_sekarang">Login Sekarang</string>
    <string name="berhasil">Berhasil</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="save">Simpan</string>
    <string name="masukan_kata_sandi">Masukan sandi anda</string>
    <string name="konfirmasi_kata_sandi"> Masukan ulang sandi anda</string>
    <string name="masukan_email">Masukan email anda</string>
    <string name="belum_punya_akun">Belum mempunyai akun?</string>
    <string name="sudah_mempunyai_akun">Sudah mempunyai akun?</string>
    <string name="lupa_kata_sandi">Lupa kata sandi</string>
    <string name="atau_masuk_dengan_menggunakan">atau masuk dengan menggunakan  :</string>
    <string name="invalid_password">invalid password </string>
    <string name="proses_login_anda_berhasil">Proses login anda berhasil! </string>
    <string name="proses_login_anda_gagal">Proses login anda gagal!</string>
    <string name="succes_order">Tukang berhasil di pesan!</string>
    <string name="proses_register_anda_berhasil">Proses Register anda berhasil! </string>
    <string name="success_add_address">Berhasil menambahkan alamat! </string>
    <string name="success_update_address">Berhasil mengubah alamat! </string>
    <string name="success_update_profile">Berhasil mengubah data akun! </string>
    <string name="permission_location">Kami butuh akses lokasi untuk layanan \t yang lebih baik bagi anda! </string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="kembali">Kembali</string>
    <string name="izinkan">Izinkan</string>
    <string name="lewatkan">Lewati</string>
    <string name="keluar_dialog">Apakah anda yakin
untuk keluar?</string>
    <string name="keluar">Keluar</string>
    <string name="batal">Batal</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="akun">Akun</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="lokasi">Lokasi</string>
    <string name="pengaturan_lainnya">Pengaturan Lainnya</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="versi_app">Versi App</string>
    <string name="dalam_proses">Dalam Proses</string>
    <string name="riwayat">Riwayat</string>
    <string name="ratting">4.8</string>
    <string name="pesan_lagi">Pesan Lagi</string>
    <string name="kategori">Kategori</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="detail">Detail Tukang</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="portofolio">Portofolio</string>
    <string name="ulasan">Ulasan</string>
    <string name="rp">Rp</string>
    <string name="price">Rp 34.500</string>
    <string name="order_now">Pesan Sekarang</string>
    <string name="selesai">Selesai</string>
    <string name="update">Ubah Foto Profil</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="adress_list">Daftar Alamat</string>
    <string name="update_account">Ubah Akun</string>
    <string name="notification">Notifikasi</string>
    <string name="searchbar_hint">Search</string>
    <string name="cat">Cat Atap Pipa</string>
    <string name="example_deskripsi">Tukang bangunan terlibat dalam konstruksi dan renovasi bangunan. Mereka memiliki keterampilan dalam membaca gambar teknis, mengukur, memotong, dan memasang material seperti kayu, batu, beton, dan logam. </string>
    <string name="username_can_not_be_empty">username tidak boleh kosong</string>
    <string name="field_can_not_be_empty">kolom ini tidak boleh kosong</string>
    <string name="add_address">Tambah Alamat</string>
    <string name="update_address">Ubah Alamat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>