<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="back"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/round_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    <!--  android:background="?android:attr/selectableItemBackground"-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingTop="2dp"
        android:text="@string/detail"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toBottomOf="@+id/ib_back"
        app:layout_constraintStart_toEndOf="@+id/ib_back"
        app:layout_constraintTop_toTopOf="@+id/ib_back" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_white"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ib_back"
        tools:layout_editor_absoluteX="-16dp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imgCraftsman"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/jeni"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_ratting"
                    app:layout_constraintStart_toStartOf="@+id/tv_status"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status" />

                <TextView
                    android:id="@+id/tv_ratting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratting"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/tv_craftsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Sumanto"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/imgCraftsman"
                    app:layout_constraintTop_toTopOf="@+id/imgCraftsman" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:text="Service :"
                    app:layout_constraintStart_toEndOf="@+id/imgCraftsman"
                    app:layout_constraintTop_toBottomOf="@+id/tv_craftsName" />

                <TextView
                    android:id="@+id/tv_skilled"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="10dp"
                    android:gravity="center_vertical|center_horizontal"

                    android:text="@string/cat"
                    android:textColor="@color/yellow"

                    app:layout_constraintBottom_toBottomOf="@+id/tv_status"
                    app:layout_constraintStart_toEndOf="@+id/tv_status"
                    app:layout_constraintTop_toTopOf="@+id/tv_status"
                    tools:ignore="SpUsage,TextSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:text="@string/deskripsi"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:text="@string/example_deskripsi"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/portofolio"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPortofolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"

            android:text="@string/ulasan"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/rvPortofolio"
            app:layout_constraintTop_toBottomOf="@+id/rvPortofolio" />

        <TextView
            android:id="@+id/tv_lihat_semua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lihat semua"
            android:textColor="@color/yellow"
            android:padding="5dp"
            android:background="@drawable/statelist_item_background"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:itemCount="2"
            tools:listitem="@layout/item_review" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/price"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_orderNow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_orderNow" />

        <Button
            android:id="@+id/btn_orderNow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/poppins_bold"
            android:shadowColor="@android:color/transparent"
            android:text="@string/order_now"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvReview"
            tools:ignore="TextContrastCheck,VisualLintButtonSize,DuplicateSpeakableTextCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>